@@ -242,9 +242,9 @@ void dlgDatabase::OnChangeRestr(wxCommandEvent &ev)
         schemaRestrictionOk = true;
     else
     {
-        wxString sql=wxT("EXPLAIN SELECT 1 FROM pg_namespace nsp\n")
+        wxString sql=wxT("SELECT 1 FROM pg_namespace nsp\n")
                 wxT("  JOIN pg_description des ON des.objoid=nsp.oid\n")
-                wxT(" WHERE (") + txtSchemaRestr->GetValue() + wxT(")");
+                wxT(" WHERE nspname NOT IN (") + txtSchemaRestr->GetValue() + wxT(")");
 
         wxLogNull nix;
         wxString result=connection->ExecuteScalar(sql);
